# warmpath

./: .gitignore  AGENTS.md  README.md  Taskfile.yaml  architecture.md  pyproject.toml
docs/: skill.md
linkedin_connections/: __init__.py  cli.py
scripts/: release.sh
tests/: test_cli_commands.py  test_company_path_live.py  test_mutual_connections.py
warmpath/: cli.py
